--- a/src/main/java/ru/javarush/bogdanov/cryptoanalizer/view/SwingForm.form
+++ b/src/main/java/ru/javarush/bogdanov/cryptoanalizer/view/SwingForm.form
@@ -7,7 +7,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="1f005" binding="south" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="1f005" binding="south" layout-manager="GridLayoutManager" row-count="5" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="South"/>
         <properties/>
@@ -139,6 +139,46 @@
               <text value="LoadDict"/>
             </properties>
           </component>
+          <component id="d852a" class="javax.swing.JButton" binding="swapSrcDest">
+            <constraints>
+              <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="SwapSrc&amp;Dest"/>
+            </properties>
+          </component>
+          <component id="1cb0" class="javax.swing.JTextField" binding="resultLetter">
+            <constraints>
+              <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="f64f9" class="javax.swing.JButton" binding="swapLetters">
+            <constraints>
+              <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="SwapLetters"/>
+            </properties>
+          </component>
+          <component id="5bbdf" class="javax.swing.JTextField" binding="targetLetter">
+            <constraints>
+              <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="d932f" class="javax.swing.JLabel" binding="infoAbSwap">
+            <constraints>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Swap letters in dest area"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <grid id="37589" binding="center" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -147,22 +187,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="3ec5f" class="javax.swing.JTextArea" binding="srcTextArea">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="500" height="400"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="1e25c" class="javax.swing.JTextArea" binding="destTextArea">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="500" height="400"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <component id="af357" class="javax.swing.JLabel" binding="srcLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -179,6 +203,32 @@
               <text value="dest"/>
             </properties>
           </component>
+          <scrollpane id="cfac">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="3ec5f" class="javax.swing.JTextArea" binding="srcTextArea">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
+          <scrollpane id="1396c">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="1e25c" class="javax.swing.JTextArea" binding="destTextArea">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
     </children>
